Code review: applied WordPress coding styles (phpcs, phpcbs, wpcs)

--- a/languages/twicpics-fr_FR.po
+++ b/languages/twicpics-fr_FR.po
@@ -135,7 +135,7 @@ msgid "Twicpics - Responsive Images as a Service"
 msgstr ""
 
 #. Plugin URI of the plugin/theme
-msgid "https://www.twicpics.com/"
+msgid "https://www.twicpics.com/wordpress"
 msgstr ""
 
 #. Description of the plugin/theme
